bin/testsuite/tests/compiler/src/errors/compiler4959.swg
#global testerror "Err0663"
#test
{
    #scope(0)
    {

    }
}